--- a/dhaara/src/app/globals.css
+++ b/dhaara/src/app/globals.css
@@ -1,3 +1,7 @@
+@import 'leaflet/dist/leaflet.css';
+.leaflet-default-icon-path {
+  background-image: url('https://unpkg.com/leaflet@1.9.4/dist/images/marker-icon.png');
+}
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
